--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
         android:label="ScreenTime"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
-        <activity
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="YOUR KEY HERE"/>       
+         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
